build/configs: To change file system type from smartfs to jSmartFs for defconfig.

--- a/os/board/imxrt1050-evk/Kconfig
+++ b/os/board/imxrt1050-evk/Kconfig
@@ -71,7 +71,7 @@ config IMXRT_RAMMTD_NEBLOCKS
 		You have to consider total ramsize to alloc ramfs size.
 
 config IMXRT_RAMMTD_DEV_NUMBER
-	int "device number for mtd of smartfs"
+	int "device number for mtd of jSmartFs"
 	default 3
 
 config IMXRT_RAMMTD_DEV_POINT
