--- a/os/board/common/Kconfig
+++ b/os/board/common/Kconfig
@@ -39,11 +39,11 @@ config FLASH_PART_SIZE
 
 config FLASH_PART_TYPE
 	string "Flash partition type list"
-	default "none,none,none,none,none,none,none,none,smartfs,config,none," if !BUILD_PROTECTED
-	default "none,none,none,none,none,none,none,none,none,smartfs,config,none," if BUILD_PROTECTED
+	default "none,none,none,none,none,none,none,none,jSmartFs,config,none," if !BUILD_PROTECTED
+	default "none,none,none,none,none,none,none,none,none,jSmartFs,config,none," if BUILD_PROTECTED
 	---help---
 		Comma separated list of partition types that can be one of
-		followings: none, smartfs, config
+		followings: none, jSmartFs, config
 
 config FLASH_PART_NAME
 	string "Flash partition name list"
@@ -91,11 +91,11 @@ config SECOND_FLASH_PART_SIZE
 
 config SECOND_FLASH_PART_TYPE
 	string "Flash partition type list"
-	default "kernel,smartfs," if APP_BINARY_SEPARATION
-	default "none,smartfs," if !APP_BINARY_SEPARATION
+	default "kernel,jSmartFs," if APP_BINARY_SEPARATION
+	default "none,jSmartFs," if !APP_BINARY_SEPARATION
 	---help---
 		Comma separated list of partition types that can be one of
-		followings: none, kernel, smartfs, romfs, ftl, config
+		followings: none, kernel, jSmartFs, romfs, ftl, config
 
 config SECOND_FLASH_PART_NAME
 	string "Flash partition name list"
