apps/examples: To change file system type from smartfs to jSmartFs for application.

--- a/apps/examples/smartfs/Makefile
+++ b/apps/examples/smartfs/Makefile
@@ -16,7 +16,7 @@
 #
 ###########################################################################
 
-MENUDESC = "SmartFs Test Applications"
+MENUDESC = "jSmartFs Test Applications"
 
 include $(APPDIR)/Make.defs
 
